feat: 处理编译噪音